--- a/chatbot/parent/templates/master_parent.html
+++ b/chatbot/parent/templates/master_parent.html
@@ -117,7 +117,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{% url 'media-parent' %}">
                         <span class="fa fa-camera mr-3"></span><span class="text"> Media Gallery</span>
                     </a>
                 </li>
