--- a/chatbot/teacher/templates/attendance_list.html
+++ b/chatbot/teacher/templates/attendance_list.html
@@ -220,8 +220,9 @@ button:active {
 <div class="header-container">
     <h1 style="font-size: 20px;" class="slide-in-left">Attendance List</h1>
     <div id="navbar">
-        <a href="{% url 'attendance-list' %}" class="navbar-link">Attendance List</a>
         <a href="{% url 'student-attendance' %}" class="navbar-link">Student Attendance</a>
+        <a href="{% url 'attendance-list' %}" class="navbar-link">Attendance List</a>
+        
     </div>
 </div>
 
@@ -251,6 +252,16 @@ button:active {
         <i class="fa fa-search search-icon"></i>
     </div>
     </div>
+    {% if messages %}
+    {% for message in messages %}
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    {% endfor %}
+{% endif %}
     
     <br>
     {% if attendance_list %}
